--- a/backendv3/build.gradle
+++ b/backendv3/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.json:json:20230618'
     implementation 'com.github.javafaker:javafaker:1.0.2'
+    implementation 'jakarta.json:jakarta.json-api:2.0.2'
+    implementation 'org.glassfish:jakarta.json:2.0.1'
 }
 
 tasks.named('test') {
