--- a/backendv3/build.gradle
+++ b/backendv3/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.github.javafaker:javafaker:1.0.2'
     implementation 'jakarta.json:jakarta.json-api:2.0.2'
     implementation 'org.glassfish:jakarta.json:2.0.1'
+    implementation 'junit:junit:4.13.2'
 }
 
 tasks.named('test') {
