--- a/backendv3/build.gradle
+++ b/backendv3/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.4'
+    id 'org.springframework.boot' version '2.6.0'
     id 'io.spring.dependency-management' version '1.1.3'
 }
 
@@ -8,7 +8,8 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '17'
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
 
 configurations {
@@ -32,9 +33,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.json:json:20230618'
     implementation 'com.github.javafaker:javafaker:1.0.2'
-    implementation 'jakarta.json:jakarta.json-api:2.0.2'
-    implementation 'org.glassfish:jakarta.json:2.0.1'
     implementation 'junit:junit:4.13.2'
+    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
 }
 
 tasks.named('test') {
